--- a/src/Tasks/Resources/xlf/Strings.en.xlf
+++ b/src/Tasks/Resources/xlf/Strings.en.xlf
@@ -2649,8 +2649,8 @@
         <note>{StrBegin="MSB3701: "}</note>
       </trans-unit>
       <trans-unit id="XslTransform.PrecompiledXsltError">
-        <source>MSB3705: Precompiled XSLTs are not supported in .NET Core</source>
-        <target state="new">MSB3705: Precompiled XSLTs are not supported in .NET Core</target>
+        <source>MSB3705: XslCompiledDllPath is not supported when building with .NET Core.</source>
+        <target state="new">MSB3705: XslCompiledDllPath is not supported when building with .NET Core.</target>
         <note>{StrBegin="MSB3705: "}</note>
       </trans-unit>
       <trans-unit id="XslTransform.XsltArgumentsError">
