--- a/src/Shared/Resources/xlf/Strings.shared.ja.xlf
+++ b/src/Shared/Resources/xlf/Strings.shared.ja.xlf
@@ -32,6 +32,16 @@
         <target state="translated">{0} ({1},{2})</target>
         <note>A file location to be embedded in a string.</note>
       </trans-unit>
+      <trans-unit id="JsonParsingError">
+        <source>MSB5025: Json in solution filter file "{0}" incorrectly formatted.</source>
+        <target state="new">MSB5025: Json in solution filter file "{0}" incorrectly formatted.</target>
+        <note>{StrBegin="MSB: 5025"}UE: The solution filename is provided separately to loggers.</note>
+      </trans-unit>
+      <trans-unit id="MissingSolutionError">
+        <source>MSB5026: The file at "{0}" does not exist.</source>
+        <target state="new">MSB5026: The file at "{0}" does not exist.</target>
+        <note>{StrBegin="MSB: 5026"}UE: The solution filename is provided separately to loggers.</note>
+      </trans-unit>
       <trans-unit id="ModifyingTaskHostEnvironmentHeader">
         <source>Making the following modifications to the environment received from the parent node before applying it to the task host:</source>
         <target state="translated">親ノードから受け取った環境をタスク ホストに適用する前に、次の変更を行っています:</target>
@@ -60,14 +70,14 @@
         <target state="translated">MSBuild は有効な "{0}" オブジェクトを必要としています。</target>
         <note />
       </trans-unit>
+      <trans-unit id="ProjectDoesNotExist">
+        <source>MSB5027: There is no project file at "{0}" or it is an absolute path instead of a relative path from the solution file.</source>
+        <target state="new">MSB5027: There is no project file at "{0}" or it is an absolute path instead of a relative path from the solution file.</target>
+        <note>{StrBegin="MSB: 5027"}UE: The project filename is provided separately to loggers.</note>
+      </trans-unit>
       <trans-unit id="Shared.PathTooLong">
         <source>Path: {0} exceeds the OS max path limit. The fully qualified file name must be less than {1} characters.</source>
         <target state="translated">パス: {0} は OS のパスの上限を越えています。完全修飾のファイル名は {1} 文字以下にする必要があります。</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="SolutionFilterFileInvalid">
-        <source>Unexpected solution filter file format.</source>
-        <target state="new">Unexpected solution filter file format.</target>
         <note />
       </trans-unit>
       <trans-unit id="UnrecognizedToolsVersion">
