--- a/src/Shared/Resources/xlf/Strings.shared.pt-BR.xlf
+++ b/src/Shared/Resources/xlf/Strings.shared.pt-BR.xlf
@@ -32,6 +32,16 @@
         <target state="translated">{0} ({1},{2})</target>
         <note>A file location to be embedded in a string.</note>
       </trans-unit>
+      <trans-unit id="JsonParsingError">
+        <source>MSB5025: Json in solution filter file "{0}" incorrectly formatted.</source>
+        <target state="new">MSB5025: Json in solution filter file "{0}" incorrectly formatted.</target>
+        <note>{StrBegin="MSB: 5025"}UE: The solution filename is provided separately to loggers.</note>
+      </trans-unit>
+      <trans-unit id="MissingSolutionError">
+        <source>MSB5026: The file at "{0}" does not exist.</source>
+        <target state="new">MSB5026: The file at "{0}" does not exist.</target>
+        <note>{StrBegin="MSB: 5026"}UE: The solution filename is provided separately to loggers.</note>
+      </trans-unit>
       <trans-unit id="ModifyingTaskHostEnvironmentHeader">
         <source>Making the following modifications to the environment received from the parent node before applying it to the task host:</source>
         <target state="translated">Fazendo as seguintes modificações no ambiente recebido do nó pai antes de aplicá-lo ao host de tarefas:</target>
@@ -60,14 +70,14 @@
         <target state="translated">O MSBuild está esperando um objeto "{0}" válido.</target>
         <note />
       </trans-unit>
+      <trans-unit id="ProjectDoesNotExist">
+        <source>MSB5027: There is no project file at "{0}" or it is an absolute path instead of a relative path from the solution file.</source>
+        <target state="new">MSB5027: There is no project file at "{0}" or it is an absolute path instead of a relative path from the solution file.</target>
+        <note>{StrBegin="MSB: 5027"}UE: The project filename is provided separately to loggers.</note>
+      </trans-unit>
       <trans-unit id="Shared.PathTooLong">
         <source>Path: {0} exceeds the OS max path limit. The fully qualified file name must be less than {1} characters.</source>
         <target state="translated">Caminho: {0} excede o limite máximo do caminho do SO. O nome do arquivo totalmente qualificado deve ter menos de {1} caracteres.</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="SolutionFilterFileInvalid">
-        <source>Unexpected solution filter file format.</source>
-        <target state="new">Unexpected solution filter file format.</target>
         <note />
       </trans-unit>
       <trans-unit id="UnrecognizedToolsVersion">
