--- a/src/Shared/Resources/Strings.shared.resx
+++ b/src/Shared/Resources/Strings.shared.resx
@@ -263,21 +263,25 @@
     <comment></comment>
   </data>
   <data name="JsonParsingError" UESanitized="false" Visibility="Public">
-    <value>MSB5025: Json in solution filter file "{0}" incorrectly formatted.</value>
+    <value>MSB5025: Json in solution filter file "{0}" is incorrectly formatted.</value>
     <comment>{StrBegin="MSB: 5025"}UE: The solution filename is provided separately to loggers.</comment>
   </data>
   <data name="MissingSolutionError" UESanitized="false" Visibility="Public">
-    <value>MSB5026: The file at "{0}" does not exist.</value>
+    <value>MSB5026: The solution filter file at "{0}" specifies there will be a solution file at "{1}", but that file does not exist.</value>
     <comment>{StrBegin="MSB: 5026"}UE: The solution filename is provided separately to loggers.</comment>
   </data>
-  <data name="ProjectDoesNotExist" UESanitized="false" Visibility="Public">
-    <value>MSB5027: There is no project file at "{0}" or it is an absolute path instead of a relative path from the solution file.</value>
+  <data name="FilteredProjectDoesNotExist" UESanitized="false" Visibility="Public">
+    <value>MSB5027: The solution filter file at "{0}" specifies that there is a project file at "{1}" relative to "{2}", but that project file was not found.</value>
     <comment>{StrBegin="MSB: 5027"}UE: The project filename is provided separately to loggers.</comment>
+  </data>
+  <data name="FilterContainsProjectNotInSolution" UESanitized="false" Visibility="Public">
+    <value>MSB5028: Solution filter file at "{0}" includes project "{1}" that is not in the solution file at "{2}".</value>
+    <comment>{StrBegin="MSB: 5028"}UE: The project filename is provided separately to loggers.</comment>
   </data>
   <!--
         The shared message bucket is: MSB5001 - MSB5999
 
-        Next message code should be MSB5028
+        Next message code should be MSB5029
 
         Some unused codes which can also be reused (because their messages were deleted, and UE hasn't indexed the codes yet):
             <none>
