--- a/src/Tasks/Common/Resources/Strings.resx
+++ b/src/Tasks/Common/Resources/Strings.resx
@@ -879,4 +879,8 @@ You may need to build the project on another operating system or architecture, o
     <value>NETSDK1193: If PublishSelfContained is set, it must be either true or false. The value given was '{0}'.</value>
     <comment>{StrBegin="NETSDK1193: "}</comment>
   </data>
+    <data name="CannotHaveSolutionLevelOutputPath" xml:space="preserve">
+    <value>NETSDK1194: Building a solution with a specific OutputPath is not supported. Specifiy the output path at the individual project level instead.</value>
+    <comment>{StrBegin="NETSDK1194: "}</comment>
+  </data>
 </root>
